apps/media-stack/sabnzbd/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media-stack
spec:
  selector:
    app: sabnzbd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
